# ian-buer-final

./: App.js  README.md  app.json  mbCHIP8.js  package.json
android/: settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle
android/app/src/debug/java/io/github/mbchip8/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: mbCHIP8-jni.cpp
android/app/src/main/cpp/libmbCHIP8/include/libmbCHIP8/: libmbchip8.h  libmbchip8_api.h
android/app/src/main/cpp/libmbCHIP8/src/core/: libmbchip8.cpp
android/app/src/main/java/io/github/mbchip8/: MainActivity.java  MainApplication.java  mbCHIP8.java  mbCHIP8Module.java  mbCHIP8Package.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/mbCHIP8react.xcodeproj/: project.pbxproj
ios/mbCHIP8react.xcodeproj/xcshareddata/xcschemes/: mbCHIP8react.xcscheme
mbCHIP8/: keypad.js  screen.js
